<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="400dp"
        android:layout_height="22dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/firebaseTxt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <TextView
            android:id="@+id/tempText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/tempText" />

        <TextView
            android:id="@+id/humidText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/humidText" />

        <TextView
            android:id="@+id/conditionText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/conditionTxt" />
    </LinearLayout>

    <TextView
        android:id="@+id/firebaseTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/firebaseText"
        app:layout_constraintBottom_toTopOf="@+id/firebaseBttn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/firebaseBttn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/firebaseBttnText"
        app:layout_constraintBottom_toTopOf="@+id/SQLTxt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/firebaseTxt" />

    <TextView
        android:id="@+id/SQLTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sqlText"
        app:layout_constraintBottom_toTopOf="@+id/sqlBttn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/firebaseBttn" />

    <Button
        android:id="@+id/sqlBttn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sqlBttnText"
        app:layout_constraintBottom_toTopOf="@+id/weatherTxt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/SQLTxt" />

    <TextView
        android:id="@+id/weatherTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/weatherText"
        app:layout_constraintBottom_toTopOf="@+id/weatherBttn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sqlBttn" />

    <Button
        android:id="@+id/weatherBttn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/weatherBttnText"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/weatherTxt" />
</androidx.constraintlayout.widget.ConstraintLayout>